--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         junit_ext_test_version = "1.1.2"
         espresso_version = "3.3.0"
 
-        firebase_bom_version = "26.7.0"
+        firebase_bom_version = "28.0.0"
         nav_version = "2.3.5"
     }
 
@@ -22,6 +22,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath 'com.google.gms:google-services:4.3.5'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
