--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
 
         firebase_bom_version = "28.0.0"
         nav_version = "2.3.5"
+        glide_version ="4.12.0"
     }
 
     repositories {
