--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,11 @@ dependencies {
     // glide image loader
     implementation "com.github.bumptech.glide:glide:$glide_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
+    // activity
+    implementation "androidx.activity:activity-ktx:$activity_version"
+    // fragment
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+    // image cropper
+    api "com.theartofdev.edmodo:android-image-cropper:$image_cropper_version"
 
 }
