--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,12 @@ buildscript {
         junit_ext_test_version = "1.1.2"
         espresso_version = "3.3.0"
 
+        activity_version = "1.2.3"
+        fragment_version = "1.3.3"
         firebase_bom_version = "28.0.0"
         nav_version = "2.3.5"
-        glide_version ="4.12.0"
+        glide_version = "4.12.0"
+        image_cropper_version = "2.8.0"
     }
 
     repositories {
